<resources>
    <string name="MAPS_API_KEY">AIzaSyD_e6tL4Qh40-5F0UAimivlBYkvZ3qTMNg</string>
    <string name="app_name">national_parks</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="bottom_maps">Map</string>
    <string name="parks">Parks</string>
    <string name="description">Description</string>
    <string name="designation">Designation</string>
    <string name="parkName">TextView</string>
    <string name="activities">Activities</string>
    <string name="topics">Topics</string>
    <string name="topics2">Topics Description</string>
    <string name="entrance_fees">Entrance Fees</string>
    <string name="hours">Hours</string>
    <string name="directions">Directions</string>
    <string name="details_activity">Details_activity</string>
    <string name="entrance_fee_detail">Entrance_fee_detail</string>
    <string name="hours_details">Hours_details</string>
    <string name="info_unavailable">Info Unavailable</string>
    <string name="direction_unavailable">Directions Unavailable</string>
    <string name="hint_search">Enter State Code: WA, OR, NW</string>
</resources>