<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:paddingBottom="32dp"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_park_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parkName"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_park_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/designation" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/details_viewpager"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" >

            </androidx.viewpager2.widget.ViewPager2>
            <TextView
                android:id="@+id/designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="8dp"
                android:text="@string/designation"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="6dp"
                android:text="@string/activities"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_activities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="6dp"
                android:text="@string/details_activity"
                />


            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="6dp"
                android:text="@string/topics"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_topics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="6dp"
                android:text="@string/topics2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="6dp"
                android:text="@string/entrance_fees"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_entrancefees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="6dp"
                android:text="@string/entrance_fee_detail" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="6dp"
                android:text="@string/hours"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_operatinghours"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginTop="4dp"
                android:paddingStart="6dp"
                android:text="@string/hours_details" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="8dp"
                android:text="@string/directions"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/details_directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:paddingBottom="70dp"
                android:textAlignment="textStart" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>